Tue Sep 28 20:38:52 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* testc.rb: BUG#258テスト項目追加

Tue Sep 28 20:22:48 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* testc.rb: BUG#250のテスト項目追加

Mon Sep 27 22:47:45 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* equijoin.rb: equijoin2 を equijoin に改名
	
Mon Sep 27 17:26:42 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
	
	* equijoin.rb: BUG#257対応

Thu Sep 23 01:08:28 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.conf.tmpl, equijoin.rb, group-by.rb, sort18.rb, sort19.rb,
	  controller.rb, c-sort.rb,p-basic-group-by.rb, p-group-by.rb,
	  p-input-local-file.rb, p-sort.rb, p-wc.rb, conf.rb: REQ256対応
	*  equijoin.rb, p-sort.rb, p-wc.rb: REQ253対応抜け

Wed Sep 22 22:51:01 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* etc/fairy.confをetc/fairy.conf.tmpl に改名: REQ255対応
	* conf.rb: REQ255対応

Wed Sep 22 20:17:31 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-group-by.rb: REQ253対応

Wed Sep 22 00:54:28 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* REQ251対応:(test 42全て完了)

Tue Sep 21 19:18:46 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-local-file-input.rb: BUG#252対応

Sun Sep 19 00:06:31 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* REQ251対応:(test 42まで完了)

Sat Sep 18 23:04:52 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* REQ251対応:(test 5まで完了)

Sat Sep 18 22:29:55 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* REQ251対応:(test 1まで完了)

Sat Sep 18 21:21:51 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-zip.rb -> p-seg-zip.rb

Sat Sep 18 21:20:56 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/fairy/node/*.rb: REQ251対応完了

Sat Sep 18 19:43:20 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-output-varray.rb -> p-output-varray.rb

Sat Sep 18 19:41:29 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/fairy/master/*.rb: REQ251対応完了
	* basic-group-by.rb, file-place.rb: REQ251対応

Sat Sep 18 18:36:33 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/fairy/client/*.rb: REQ251対応完了
